--- a/src/app/pages/product-orders/sections/order-info/order-info.component.html
+++ b/src/app/pages/product-orders/sections/order-info/order-info.component.html
@@ -103,6 +103,14 @@
                             {{ 'PRODUCT_ORDERS._cancelled' | translate }}
                         </label>
                     </li>
+                    <li class="flex items-center">
+                      <input id="unchecked" type="checkbox" value="" (change)="onStateFilterChange('unchecked')"
+                      class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500" />
+
+                      <label for="unchecked" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">
+                          {{ 'PRODUCT_ORDERS._unchecked' | translate }}
+                      </label>
+                  </li>
                 </ul>
             </div>
         </div>
