--- a/src/app/shared/billing-account-form/billing-account-form.component.html
+++ b/src/app/shared/billing-account-form/billing-account-form.component.html
@@ -7,31 +7,54 @@
         @if(billingForm.get('name')?.invalid && billingForm.get('name')?.errors?.['required'] && (billingForm.get('name')?.touched && billingForm.value.name=='')){
             <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">This field is mandatory.</span></p>
         }
+        @if(billingForm.get('name')?.invalid && billingForm.get('name')?.errors?.['maxlength']){
+            <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">Name is too long. Must be less than 250 characters.</span></p>
+        }
     </div>
     <div>
         <label for="address.country" class="mb-3 block text-sm font-semibold leading-none text-body-dark dark:text-white">{{ 'BILLING._country' | translate }}</label>
         <input id="address.country" formControlName="country" name="address.country" type="text"
-        class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 dark:bg-secondary-300 dark:border-secondary-200 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+        [ngClass]="(billingForm.get('country')?.invalid == true && billingForm.value.country!='') ? 'border-red-600' : 'border-gray-300 dark:border-secondary-200'"
+        class="mb-2 bg-gray-50 text-gray-900 dark:bg-secondary-300 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+        @if(billingForm.get('country')?.invalid && billingForm.get('country')?.errors?.['maxlength']){
+            <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">Country is too long. Must be less than 250 characters.</span></p>
+        }
     </div>
     <div>
         <label for="address.city" class="mb-3 block text-sm font-semibold leading-none text-body-dark dark:text-white">{{ 'BILLING._city' | translate }}</label>
         <input id="address.city" formControlName="city" name="address.city" type="text"
-        class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 dark:bg-secondary-300 dark:border-secondary-200 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+        [ngClass]="(billingForm.get('city')?.invalid == true && billingForm.value.city!='') ? 'border-red-600' : 'border-gray-300 dark:border-secondary-200'"
+        class="mb-2 bg-gray-50 text-gray-900 dark:bg-secondary-300 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+        @if(billingForm.get('city')?.invalid && billingForm.get('city')?.errors?.['maxlength']){
+            <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">City is too long. Must be less than 250 characters.</span></p>
+        }
     </div>
     <div>
         <label for="address.state" class="mb-3 block text-sm font-semibold leading-none text-body-dark dark:text-white">{{ 'BILLING._state' | translate }}</label>
         <input id="address.state" formControlName="stateOrProvince" name="address.state" type="text"
-        class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 dark:bg-secondary-300 dark:border-secondary-200 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+        [ngClass]="(billingForm.get('stateOrProvince')?.invalid == true && billingForm.value.stateOrProvince!='') ? 'border-red-600' : 'border-gray-300 dark:border-secondary-200'"
+        class="mb-2 bg-gray-50 text-gray-900 dark:bg-secondary-300 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+        @if(billingForm.get('stateOrProvince')?.invalid && billingForm.get('stateOrProvince')?.errors?.['maxlength']){
+            <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">State / Province is too long. Must be less than 250 characters.</span></p>
+        }
     </div>
     <div>
         <label for="address.zip" class="mb-3 block text-sm font-semibold leading-none text-body-dark dark:text-white">{{ 'BILLING._post_code' | translate }}</label>
         <input id="address.zip" formControlName="postCode" name="address.zip" type="text"
-        class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 dark:bg-secondary-300 dark:border-secondary-200 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+        [ngClass]="(billingForm.get('postCode')?.invalid == true && billingForm.value.postCode!='') ? 'border-red-600' : 'border-gray-300 dark:border-secondary-200'"
+        class="mb-2 bg-gray-50 text-gray-900 dark:bg-secondary-300 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+        @if(billingForm.get('postCode')?.invalid && billingForm.get('postCode')?.errors?.['maxlength']){
+            <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">ZIP / Postal Code is too long. Must be less than 250 characters.</span></p>
+        }
     </div>
     <div class="col-span-2">
         <label for="address.street_address" class="mb-3 block text-sm font-semibold leading-none text-body-dark dark:text-white">{{ 'BILLING._street' | translate }}</label>
         <textarea id="address.street_address" formControlName="street" name="address.street_address"
-        class="mb-2 min-h-fit bg-gray-50 border border-gray-300 text-gray-900 dark:bg-secondary-300 dark:border-secondary-200 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" rows="4"></textarea>
+        [ngClass]="(billingForm.get('street')?.invalid == true && billingForm.value.street!='') ? 'border-red-600' : 'border-gray-300 dark:border-secondary-200'"
+        class="mb-2 min-h-fit bg-gray-50 text-gray-900 dark:bg-secondary-300 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" rows="4"></textarea>
+        @if(billingForm.get('street')?.invalid && billingForm.get('street')?.errors?.['maxlength']){
+            <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">Street is too long. Must be less than 1000 characters.</span></p>
+        }
     </div>
     <div class="col-span-2">
         <label for="email" class="mb-3 block text-sm font-semibold leading-none text-body-dark dark:text-white">{{ 'BILLING._email' | translate }} (*)</label>
