--- a/src/app/shared/forms/markdown-textarea/markdown-textarea.component.html
+++ b/src/app/shared/forms/markdown-textarea/markdown-textarea.component.html
@@ -99,6 +99,7 @@
                   placeholder="Add product description..."
                   [value]="value"
                   rows="8"
+                  maxLength="100000"
                   (input)="updateValue($event)"></textarea>
       }
       @if(showEmoji){
