FIX Ticket#831519 + REFIX Ticket#831465

--- a/src/app/shared/forms/offer/offer.component.html
+++ b/src/app/shared/forms/offer/offer.component.html
@@ -15,7 +15,9 @@
     <ol class="flex items-start w-full text-sm font-medium text-center text-gray-500 dark:text-gray-400">
       @for (step of steps; track i; let i = $index) {
         <li 
-            (click)="(formType !== 'create' || i < currentStep) && goToStep(i)"
+            (click)="handleStepClick(i)"
+            [class.cursor-not-allowed]="!canNavigate(i)"
+            [class.opacity-50]="!canNavigate(i)"          
             [class.text-primary-100]="currentStep === i"
             class="flex-1 cursor-pointer">
           <span class="flex items-center justify-center w-8 h-8 md:w-10 md:h-10 mx-auto border-2 border-primary-100 dark:border-primary-50 shrink-0 rounded-full"
@@ -137,10 +139,10 @@
       </button>
 
       <button (click)="goToStep(currentStep + 1)"
-              [disabled]="currentStep === steps.length - 1 || (formType === 'create' && !validateCurrentStep())"
+              [disabled]="currentStep === steps.length - 1 || (formType === 'create' && !validateCurrentStep()) || !canNavigate(currentStep)"
               [ngClass]="{
-                'hover:bg-gray-100 hover:text-gray-700 dark:hover:bg-gray-700 dark:hover:text-white': currentStep !== steps.length - 1 && (formType !== 'create' || validateCurrentStep()),
-                'cursor-not-allowed opacity-50': currentStep === steps.length - 1 || (formType === 'create' && !validateCurrentStep())
+                'hover:bg-gray-100 hover:text-gray-700 dark:hover:bg-gray-700 dark:hover:text-white': currentStep !== steps.length - 1 && (formType !== 'create' || validateCurrentStep() || canNavigate(currentStep)),
+                'cursor-not-allowed opacity-50': currentStep === steps.length - 1 || (formType === 'create' && !validateCurrentStep() || !canNavigate(currentStep))
               }"
               class="px-4 py-2 flex items-center justify-center text-base font-medium rounded-lg text-gray-500 bg-white border border-gray-300 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400">
         Next step
@@ -152,11 +154,9 @@
       </button>
       @if(formType === 'create' && currentStep === 8 || formType === 'update'){
         <button (click)="submitForm()"
-        [disabled]="formType === 'update' ? !hasChanges : !isFormValid"
-        [ngClass]="{
-          'hover:bg-primary-50': formType === 'create' || formType === 'update' && hasChanges,
-          'opacity-50': formType === 'update' && !hasChanges
-        }"
+        [disabled]="!productOfferForm.controls['generalInfo'].valid"
+        [ngClass]="formType === 'update' && !productOfferForm.controls['generalInfo'].valid ? 'opacity-50' : 'hover:bg-primary-50'"
+
         class="px-4 py-2 text-base font-medium text-white rounded-lg bg-primary-100">
           {{ formType === 'create' ? 'Create Offer' : 'Update Offer' }}
         </button>
