--- a/src/app/pages/admin/categories/categories.component.html
+++ b/src/app/pages/admin/categories/categories.component.html
@@ -117,13 +117,13 @@
                         </td>
                         <td class="hidden md:flex px-6 py-4 w-fit">
                             @if(cat.lifecycleStatus == 'Active'){
-                                <span class="bg-blue-100 dark:bg-secondary-300 text-blue-600 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-blue-400">{{cat.lifecycleStatus}}</span>
+                                <span class="bg-blue-100 max-h-6 dark:bg-secondary-300 text-blue-600 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-blue-400">{{cat.lifecycleStatus}}</span>
                             } @else if(cat.lifecycleStatus == 'Launched') {
-                                <span class="bg-blue-100 dark:bg-secondary-300 text-green-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-green-500">{{cat.lifecycleStatus}}</span>
+                                <span class="bg-blue-100 max-h-6 dark:bg-secondary-300 text-green-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-green-500">{{cat.lifecycleStatus}}</span>
                             } @else if(cat.lifecycleStatus == 'Retired') {
-                                <span class="bg-blue-100 dark:bg-secondary-300 text-yellow-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-yellow-500">{{cat.lifecycleStatus}}</span>
+                                <span class="bg-blue-100 max-h-6 dark:bg-secondary-300 text-yellow-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-yellow-500">{{cat.lifecycleStatus}}</span>
                             } @else if(cat.lifecycleStatus == 'Obsolete') {
-                                <span class="bg-blue-100 dark:bg-secondary-300 text-red-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-red-500">{{cat.lifecycleStatus}}</span>
+                                <span class="bg-blue-100 max-h-6 dark:bg-secondary-300 text-red-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-red-500">{{cat.lifecycleStatus}}</span>
                             }
                         </td>
                         <td class="hidden md:table-cell px-6 py-4 w-fit">
